force-app/main/default/objects/League__c/League__c.object-meta.xml
<CustomObject>
    <description
  >Top-level organization representing a hockey league (e.g., Ontario Minor Hockey Association)</description>
    <label>League</label>
    <nameField>
        <label>League Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leagues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>