force-app/main/default/objects/League__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Primary contact phone number for the league</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>