force-app/main/default/objects/League__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>URL to the league logo image</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>