force-app/main/default/objects/League__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description
  >Geographic region of the league (e.g., Ontario, Quebec, Alberta, New York, etc.)</description>
    <label>Region</label>
    <type>Text</type>
    <length>100</length>
</CustomField>