force-app/main/default/objects/League__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Official league website URL</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>